# usd-explainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Main.cpp  MainWindow.cpp  MainWindow.h  UsdExplainer.cpp  UsdExplainer.h  UsdExplainerSyntax.cpp  UsdHighlighter.cpp  UsdHighlighter.h  UsdHighlighterSyntax.cpp  UsdHighlighterSyntax.h  UsdTextEdit.cpp  UsdTextEdit.h
src/syntax/: convert_tmLanguage.py  syntax_definitions_USD.json  syntax_definitions_to_cpp.py  usd.tmLanguage.json
